# claude-plug-in-sandbox

./: README.md
.claude-plugin/: marketplace.json
plugins/ears/: README.md
plugins/ears/.claude-plugin/: plugin.json
plugins/flow-logger/: README.md  pyproject.toml  requirements.txt
plugins/flow-logger/.claude-plugin/: plugin.json
plugins/flow-logger/claude_flow_logger/: __init__.py  __main__.py  cli.py  diagram.py  logger.py  parser.py  server.py
plugins/flow-logger/hooks/: hooks.json
plugins/flow-logger/scripts/: setup.sh
plugins/input-analyzer/: README.md
plugins/input-analyzer/.claude-plugin/: plugin.json
plugins/input-analyzer/agents/: functional-analyst.md  input-analyzer.md  quality-compliance-agent.md  skill-author.md  source-curator.md  technical-architect.md  ui-ux-specialist.md
plugins/input-analyzer/commands/: input-analyzer.md
plugins/input-hierarchization/: README.md
plugins/input-hierarchization/.claude-plugin/: plugin.json
plugins/test-case-generator/: README.md
plugins/test-case-generator/.claude-plugin/: plugin.json
plugins/test-case-generator/agents/: component-strategy.md  cross-case-strategy.md  edge-case-strategy.md  functional-analyst.md  integration-strategy.md  limit-case-strategy.md  quality-compliance-agent.md  scenario-coverage-checker.md  scenario-designer.md  skill-author.md  skill-synthesizer.md  source-curator.md  technical-architect.md  test-case-generator.md  ui-ux-specialist.md
plugins/test-case-generator/commands/: test-case-generator.md
plugins/tet-atf-knowledge/: README.md
(+30 files in other folders)
